--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -81,3 +81,36 @@
 .languageToggleButton:hover {
     background-color: #2ecc71;
 }
+
+.spaecialText {
+    font-size: 18px;
+    font-weight: 600;
+    color: rgb(108, 159, 196);
+    font-family: 'Roboto', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+}
+
+.portfolioButton {
+    padding: 10px 20px;
+    margin: 20px 0;
+    background-color: transparent;
+    color: #2980b9;
+    border: 2px solid #2980b9;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 500;
+    transition: background-color 0.3s ease, color 0.3s ease, transform 0.2s ease;
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    text-decoration: none; /* Remove default underline from links */
+}
+
+.portfolioButton:hover {
+    background-color: #2980b9;
+    color: #ffffff;
+    transform: translateY(-2px);
+}
