Responsiveness for mathematical entries

--- a/src/styles/default.module.css
+++ b/src/styles/default.module.css
@@ -2,6 +2,9 @@
 
 .total-container {
     margin: 1rem;
+    display:'flex';
+    justify-content: 'center';
+    align-items: 'center';
 }
 
 .header-container {
