--- a/src/styles/layout_2.module.css
+++ b/src/styles/layout_2.module.css
@@ -11,18 +11,20 @@
 
 .btnPrimary {
     background-color: #00509e;
-    border-color: #00509e;
     color: #fff;
     border-radius: 1rem;
     cursor: pointer;
     display: inline-block;
     padding: 1rem;
     text-align: center;
+    text-decoration: none;
 }
 
 .btnPrimary:hover {
+    color: #ffffff;
     background-color: #0077cc;
     border-color: #0077cc;
+    text-decoration: none;
 }
 
 .Content {
