--- a/src/styles/layout_3.module.css
+++ b/src/styles/layout_3.module.css
@@ -10,6 +10,25 @@
     max-width: 800px;
 }
 
+.btnPrimary {
+    background-color: #00509e;
+    border-color: #00509e;
+    color: #fff;
+    border-radius: 1rem;
+    cursor: pointer;
+    display: inline-block;
+    padding: 1rem;
+    text-align: center;
+}
+
+.btnPrimary:hover {
+    font-weight: bold;
+    color: #ffffff;
+    background-color: #0077cc;
+    border-color: #0077cc;
+    text-decoration: none;
+}
+
 .content {
     margin-bottom: 20px;
     background-color: #ffffff;
