--- a/src/styles/PdfViewer.module.css
+++ b/src/styles/PdfViewer.module.css
@@ -40,7 +40,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
     gap: 10px;
     position: absolute;
     bottom: 10px;
@@ -50,7 +49,7 @@
     background-color: #3182ce;
     color: #ffffff;
     border: none;
-    padding: 10px 20px;
+    padding: 0.25rem;
     border-radius: 5px;
     cursor: pointer;
 }
